src/test/ui/feature-gates/feature-gate-extern_types.stderr
error[E0658]: extern types are experimental
  --> $DIR/feature-gate-extern_types.rs:2:5
   |
LL |     type T;
   |     ^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/43467
   = help: add #![feature(extern_types)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
