src/test/ui/feature-gates/feature-gate-extern_types.rs
extern {
    type T; //~ ERROR extern types are experimental
}

fn main() {}
